--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,9 +3,17 @@ body {
     padding: 0;
     width: 100%;
 }
+.main-header{
+    position: relative;
+}
 .header{
-    height: 60px;
+     /* height: 60px;  */
     background: #388ff5;
+}
+.table-search{
+    position: absolute;
+    z-index: 99;
+    background: yellow;
 }
 .header img{
     float: left;
@@ -14,39 +22,32 @@ body {
     margin-left: 20px;
 }
 .header .search{
-    float: left;
-    padding-top: 12px;
-    width: 30%;
-    margin-left: 30px;
+    /* float: left; */
+    margin-top: 12px;
 }
 .search input{
-  
-    width: 100%;
     padding-top: 1px;
     border: 0;
     position: relative;
     background: #fff;
     height: 32px;
     width: 100%;
-    text-indent: 10px;
+    /* text-indent: 10px; */
     font-size: 14px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
 }
 .search .fa-search{
-    position: relative;
-    margin-left: -46px;
     font-size: 20px;
     color: gray;
-    top: 0px;
 }
 .fa-search:hover{
     cursor: pointer;
 }
 .menu{
     float: left;
-    margin-top: 12px;
+   padding: 15px;
 }
 .menu ul li{
     float: left;
@@ -69,6 +70,9 @@ body {
     opacity: 1;
     color: black;
 }
+/* .table-striped{
+    display: none;
+} */
 .clear-float{
     clear: both;
 }
