--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,17 @@
 <footer id="footer-content">
+    <script>
+        (function(s, u, b, i, z){
+          u[i]=u[i]||function(){
+            u[i].t=+new Date();
+            (u[i].q=u[i].q||[]).push(arguments);
+          };
+          z=s.createElement('script');
+          var zz=s.getElementsByTagName('script')[0];
+          z.async=1; z.src=b; z.id='subiz-script';
+          zz.parentNode.insertBefore(z,zz);
+        })(document, window, 'https://widgetv4.subiz.com/static/js/app.js', 'subiz');
+        subiz('setAccount', 'acqkdzqgkhrdxilanltb');
+      </script>
   <div class="container">
     <div class="footer-top row">
       <div class="footer-1 col-12 col-md-4">
