--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,11 @@
 <section (click)="noneSearch()" class="container-fluid  main-header">
     <div class="header row">
-        <img src="../../assets/logo1.jpg" alt="">
-        <div class="search">
+        <img (click) = "onHome()"src="../../assets/logo1.jpg" alt="">
+        <div class="search col-3">
             <input (click)="getData()" [(ngModel)]="textSearch" class="form-control " name="search" type="text" placeholder="Bạn tìm gì..."
                 aria-label="Search">
-            <i class="fas fa-search" aria-hidden="true"></i>
         </div>
-        <div class="menu col-lg-6 col-md-4 col-sm-2"> 
+        <div class="menu col-lg-7 col-md-12 col-sm-12"> 
             <ul>
                 <li>
                     <i class="fas fa-tv"></i>
@@ -24,16 +23,16 @@
                     <i class="fas fa-calculator"></i>
                     <a href="">Điều hòa</a>
                 </li>
-                <li>
-                    <i class="fas fa-cart-plus"></i>
-                    <a href="">Giỏ hàng</a>
+                <li >
+                    <i class="fas fa-cart-plus"></i> 
+                    <a (click) = "onShop()">Giỏ hàng()</a>
                 </li>
             </ul>
         </div>
-        <div class="clear-float"></div>
+       
     </div>
     <div *ngIf="textSearch" class="row table-search">
-        <table class="table table-striped">
+        <table class="table ">
             <tbody>
                 <tr *ngFor="let product of products  | filter:textSearch">
                     <td (click)="getValueProduct(product)">{{product?.ten}}</td>
@@ -41,4 +40,5 @@
             </tbody>
         </table>
     </div>
+    <div class="clear-float"></div>
 </section>
