--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,6 +42,11 @@
                         <p>6 lý do bạn nên mua máy lạnh thường thay vì máy lạnh Inverter</p>
                     </a>
                 </li>
+                <li>
+                    <a href="">
+                        <p>6 lý do bạn nên mua máy lạnh thường thay vì máy lạnh Inverter</p>
+                    </a>
+                </li>
 
             </ul>
         </div>
