--- a/src/app/shopping/shopping.component.css
+++ b/src/app/shopping/shopping.component.css
@@ -1,3 +1,42 @@
-.bodyShopping{
-    height: 100vh;
+.container{
+    background: white;
+}
+.table tbody tr td img{
+    width: 70px;
+}
+.form{
+    margin-top: 20px;
+}
+.form .title{
+    width: 100%;
+    color: red;
+    /* margin-left: 15px; */
+    font-size: 43px;
+    text-align: center
+}
+.form .frm1 input{
+    width: 100%;
+    height: 50px;
+    border: 1px solid #a6a6a6;
+    border-radius: 4px;
+}
+.btn_submit{
+    float: left;
+    height: 50px;
+    margin-top: 15px;
+    border: none;
+    border-radius: 4px;
+    width:48%;
+    background:#ffb916;
+    color: white;
+}
+.btn_payonline{
+    height: 50px;
+    margin-top: 15px;
+    border: none;
+    border-radius: 4px;
+    width:48%;
+    background: -webkit-linear-gradient(top,#288ad6,#0e74c2);
+    color: white;
+    margin-left: 36px;
 }
