--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,8 @@
-<p>
-  admin works!
-</p>
+<section class="container-fluid">
+    <div class="content row">
+        <div class="left-bar col-2">
+
+        </div>
+    </div>
+
+</section>
